# mtgjson-sdk-rust

./: Cargo.toml  README.md
examples/deck-api/: Cargo.toml
examples/deck-api/src/: error.rs  main.rs  state.rs
examples/deck-api/src/routes/: decks.rs  meta.rs  mod.rs  sets.rs
src/: async_client.rs  cache.rs  config.rs  connection.rs  error.rs  lib.rs  sql_builder.rs
src/booster/: mod.rs  simulator.rs
src/models/: card.rs  deck.rs  mod.rs  price.rs  sealed.rs  set.rs  sub.rs
src/queries/: cards.rs  decks.rs  enums.rs  identifiers.rs  legalities.rs  mod.rs  prices.rs  sealed.rs  sets.rs  skus.rs  tokens.rs
tests/: smoke_test.rs  test_cards.rs  test_connection.rs  test_identifiers.rs  test_legalities.rs  test_sets.rs  test_sql_builder.rs  test_tokens.rs
tests/common/: mod.rs
