[package]
name = "mtgjson-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for MTGJSON — query Magic: The Gathering card data via DuckDB"
authors = ["Robert Pratt"]

[dependencies]
duckdb = { version = "1.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json", "gzip"] }
flate2 = "1.0"
dirs = "6.0"
thiserror = "2.0"
rand = "0.8"
tempfile = "3.0"

[dev-dependencies]
tempfile = "3.0"
serde_json = "1.0"
